--- a/similarity_search/test/bunit.vcxproj
+++ b/similarity_search/test/bunit.vcxproj
@@ -90,7 +90,7 @@
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;CMAKE_INTDIR="Debug";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName)$(TargetExt)_compile.pdb</ProgramDataBaseFileName>
-      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <ResourceCompile>
@@ -139,7 +139,7 @@
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;CMAKE_INTDIR="Release";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName)$(TargetExt)_compile.pdb</ProgramDataBaseFileName>
-      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <FloatingPointModel>Fast</FloatingPointModel>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -225,8 +225,11 @@
     <ClCompile Include="bunit.cc" />
     <ClCompile Include="test_distfunc.cc" />
     <ClCompile Include="test_editdist.cc" />
+    <ClCompile Include="test_eval.cc" />
     <ClCompile Include="test_lpnorm.cc" />
     <ClCompile Include="test_object.cc" />
+    <ClCompile Include="test_proj.cc" />
+    <ClCompile Include="test_sqfd.cc" />
     <ClCompile Include="test_timer.cc" />
     <ClCompile Include="test_fp.cc" />
   </ItemGroup>
@@ -236,6 +239,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bunit.h" />
     <ClInclude Include="testdataset.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
