--- a/query_server/cpp/makefile
+++ b/query_server/cpp/makefile
@@ -1,10 +1,10 @@
-NON_METRIC_SPACE_LIBRARY=../similarity_search/
+NON_METRIC_SPACE_LIBRARY=../../similarity_search/
 NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
 NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/release
 
 LIBS= -lthrift -lNonMetricSpaceLib -lgsl -lgslcblas -llshkit -lboost_program_options
 
-CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC)  -I./gen-cpp/
+CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC)  -I./gen-thrift/
 # Enable C++11
 CXXFLAGS += -std=c++11
 # OMP flags
@@ -19,15 +19,15 @@ BIN=query_server query_client
 all: $(BIN)
 
 clean:
-	rm -f *.o gen-cpp/*.o $(BIN)
+	rm -f *.o gen-thrift/*.o $(BIN)
 
-THRIFT_SRC=$(wildcard gen-cpp/*.cpp)
+THRIFT_SRC=$(wildcard gen-thrift/*.cpp)
 THRIFT_OBJ=$(patsubst %.cpp,%.o,$(THRIFT_SRC))
 
 # Note -pthread: this enables threads!!!
-query_server:  $(THRIFT_OBJ) QueryService_server.o gen-cpp/*.h makefile
+query_server:  $(THRIFT_OBJ) QueryService_server.o gen-thrift/*.h makefile
 	$(CXX) -o$@  $(THRIFT_OBJ) QueryService_server.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread -fopenmp 
 
-query_client:  $(THRIFT_OBJ) QueryClient.o gen-cpp/*.h makefile
+query_client:  $(THRIFT_OBJ) QueryClient.o gen-thrift/*.h makefile
 	$(CXX) -o$@  $(THRIFT_OBJ) QueryClient.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread -fopenmp 
 
