See changes: 1) more robust serialization version (with sanity checkes) for NAPP 2) permitting to specify createIndex saveIndex and loadIndex at the same time. When index exists, it is loaded. If not, it is created and saved.

--- a/python_gen_bindings/makefile
+++ b/python_gen_bindings/makefile
@@ -22,7 +22,8 @@ install: all
 
 .PHONY: clean 
 
-$(FINALLIB): $(OBJECTS)
+$(FINALLIB): $(OBJECTS) $(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a
+
 	$(CXX) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $(FINALLIB)
 
 .cc.o:
