--- a/python_vect_bindings/makefile
+++ b/python_vect_bindings/makefile
@@ -8,21 +8,21 @@ ADD_LIBS= -lrt -lgsl -lgslcblas -lboost_program_options -fopenmp
 CXXFLAGS=-c -fpic -Wall -I$(PYTHON_INC) -I$(NON_METRIC_SPACE_LIBRARY_INC) -std=c++11 -Ofast -fno-strict-aliasing
 LDFLAGS=-shared -lpython$(PYTHON_VERSION) -pthread 
 
-SOURCES=nmslib.cc
+SOURCES=nmslib_vector.cc
 OBJECTS=$(SOURCES:.cc=.o)
 LIBS=$(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a $(NON_METRIC_SPACE_LIBRARY_LIB)/liblshkit.a $(ADD_LIBS) 
 
-FINALLIB=nmslib.so
+FINALLIB=nmslib_vector.so
 
 all: $(SOURCES) $(FINALLIB)
 
 install: all
-	cp nmslib.so /usr/local/lib/python$(PYTHON_VERSION)/dist-packages
+	cp nmslib_vector.so /usr/local/lib/python$(PYTHON_VERSION)/dist-packages
 
 
 .PHONY: clean 
 
-$(FINALLIB): $(OBJECTS)
+$(FINALLIB): $(OBJECTS) $(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a
 	$(CXX) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $(FINALLIB)
 
 .cc.o:
