--- a/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
+++ b/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
@@ -173,6 +173,12 @@
     <ClCompile Include="method\permutation_prefix_index.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="method\hnsw.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="method\hnsw_distfunc_opt.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\distcomp.h">
